--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="theme-color" content="black">
+    <meta name="theme-color" content="#778899">
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0">
     <title>Local Weather App - Syed Samiuddin</title>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css'>
     <link rel="icon" type="image/x-icon" href="favicon.ico" >
